<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textViewTitre"
        android:layout_gravity="center_horizontal"
        android:textSize="45sp" />

    <ImageView
        android:layout_width="697dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="0.49" />

    <TextView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description_accueil"
        android:id="@+id/textViewDescription"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUsername"
        android:text="@string/placeholder_login"
        android:inputType="text"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextMotDePasse"
        android:text="@string/placeholer_password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_connexion"
        android:id="@+id/buttonConnexion"
        android:layout_gravity="center_horizontal"
        android:onClick="ClickHandlerButtonConnexion"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_inscription"
        android:id="@+id/buttonInscription"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:onClick="ClickHandlerButtonInscription"/>

</LinearLayout>