<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nom_compte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview1"
            android:layout_weight="3"
            android:textAlignment="textStart"
            android:paddingLeft="15dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editText_nomUtilisateur"
            android:layout_weight="2"
            android:singleLine="true"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mot_passe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:paddingLeft="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_motPasse"
            android:layout_weight="2"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="3"
            android:textSize="18sp"
            android:paddingLeft="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_nom"
            android:layout_weight="2"
            android:singleLine="true"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="3"
            android:textSize="18sp"
            android:paddingLeft="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_prenom"
            android:layout_weight="2"
            android:singleLine="true"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <TextView
        android:text="@string/etablisseent_origine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:paddingLeft="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_etablissementOrigine"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <TextView
        android:text="@string/endroit_stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:paddingLeft="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_endroitStage"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <TextView
        android:text="@string/joindre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:paddingLeft="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_joindre"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <TextView
        android:text="@string/commentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:paddingLeft="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_comentaire" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/bouton_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_annuler"
            android:layout_weight="1" />

        <Button
            android:text="@string/bouton_confirmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Confimer"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>